# research-link-technology-landscaping

./: .gitattributes  .gitignore  IMPLEMENTATION_NOTES.md  LICENSE  Makefile  PROMPTS_CONFIG.md  README.md  TODO.md  ToDo.md  config.yaml  config_manager.py  demo.ipynb  main.py  pyproject.toml  requirements.txt  tasks.py
.github/: copilot-instructions.md
.github/prompts/: copilot-instructions.md
.github/workflows/: deploy-streamlit.yml  deploy.yml
anzsrc/: data.py
data/: research_keywords.db
modeling/: .dockerignore  .gitignore  AGENTS.md  CATEGORY_TRENDS_README.md  Dockerfile  ENHANCED_EMBED_COMMANDS.md  FOR_CODES_README.md  KEYWORDS_DISPLAY_ENHANCEMENT.md  Makefile  OPTIMIZATION_SUMMARY.md  README.md  TODO.md  VISUALISATION_README.md  abstract.py  analysis.py  anzsrc_cleaner.py  app.py  batch_utils.py  categorise.py  categorise_keywords.py  classify.py  cli.py  clustering.py  coarsen.py  config.py  config.yaml  corsen.py  data_explorer_helper.py  database.py  demo.ipynb  demo.py  docker-compose.yml  embedding.py  embedding_old.py  example_trends_usage.py  extract.py  for_codes.py  for_codes_cleaner.py  grants.py  harmonise.py  (+40 more)
modeling/.github/instructions/: main.instructions.md
modeling/.github/prompts/: CRITICAL.md
modeling/.streamlit/: config.toml
modeling/PromptTemplates/: categorise.txt  coarsen.txt  extract.txt  merge.txt  refine.txt  review_harmonization.txt
modeling/backup/: classify.py  coarsen.py
modeling/backup/PromptTemplates/: merge.txt  refine.txt
modeling/logs/results/: categories.json  classification.json
modeling/optional/: classify.py  clustering.py  coarsen.py  merge_taxonomy.py  refine.py  review.py  solver.py
modeling/pages/: 1_📈_Keyword_Trends.py  2_🌳_Research_Landscape.py  3_📊_Grant_Distributions.py  4_🔍_Search.py  5_🏷️_Category_Hierarchy.py
modeling/pipelines/: __init__.py  batching.py  categorise.py  cluster_io.py  clustering.py  concurrency.py  embedding.py  extract.py  llm_client.py  merge.py  semantic.py
modeling/results/chromadb/: chroma.sqlite3
modeling/web/: app.py  entrypoint.py  shared_utils.py  sidebar.py  test_app.py
modeling/web/pages/: 1_Keywords.py  1_📈_Keywords.py  2_Research_Landscape.py  2_🌳_Research_Landscape.py  3_Grants.py  3_📊_Grant_Distributions.py  4_Categories.py  4_🔍_Search.py  categories.py  comparing_organisations.py  grants.py  grants.py.backup  keywords.py  organisation.py  organisation.py.backup  raw_data.py  research_landscape.py  research_landscape.py.backup
modeling/web/pages/.streamlit/: config.toml
modeling/web/static/css/: styles.css  tailwind-enhanced.css
pyrla/: README.md  __init__.py  cli.py  client.py  config.py  demo.ipynb  exceptions.py  main.py  models.py  pyproject.toml
pyrla/pyrla/: cli.py  client.py  examples.py  utils.py
web/: app.py
