[project]
name = "modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inspect-ai>=0.3.123",
    "jupyter>=1.1.1",
    "neo4j>=5.28.2",
    "nltk>=3.8.1",
    "numpy>=1.24.0",
    "openai>=1.99.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly-express>=0.4.1",
    "pyarrow>=21.0.0",
    "pyrla",
    "scikit-learn>=1.3.0",
]

[tool.uv.sources]
pyrla = { path = "../pyrla" }
