[project]
name = "modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inspect-ai>=0.3.123",
    "jupyter>=1.1.1",
    "neo4j>=5.28.2",
    "numpy>=1.24.0",
    "openai>=1.99.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly-express>=0.4.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.3.0",
    "gensim>=4.3.0",
    "fastmcp>=2.11.0",
    "seaborn>=0.13.2",
    "chromadb>=1.0.20",
    "tabulate>=0.9.0",
    "nltk>=3.9.1",
    "jq>=1.10.0",
    "streamlit>=1.49.0",
    "tiktoken>=0.11.0",
    "transformers>=4.55.4",
    "scipy>=1.13.1",
    "sentence-transformers>=5.1.0",
    "datamapplot>=0.6.4",
    "typer>=0.12.0",
    "st-annotated-text>=4.0.2",
    "pygwalker>=0.4.9.15",
    "ydata-profiling>=4.17.0",
]

[tool.uv.sources]
pyrla = { path = "../pyrla" }
